# Samaritan

./: .gitignore  README.md  Readme.md  engine.h  move.h  movegen.cpp  movegen.h  position.cpp  position.h  samaritan.cpp  transposition_table.cpp  transposition_table.h  types.h  uci.h
licences/: LICENCE
samaritan/: CMakeLists.txt  datagen.cxx  samaritan.cxx
samaritan/include/: chess.h  engine.h  movegen.h  perft.h  position.h  search.h  transpositiontable.h  utility.h
samaritan/include/nnue/: accumulator.h  dense.h  nnue.h  simd.h
samaritan/include/nnue/activation/: ReLu.h
samaritan/src/: dense.cc  engine.cpp  movegen.cpp  utility.cpp  utitlity.cpp
samaritan/tests/: dense.cc  movegen_test.cc  nnue.cc  nnue_correctness_test.cc  search_test.cc  test_helpers.h
train/: trainer.py  trainsample.txt
